2006-11-24  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix CLEANFILES.
	* tests/Makefile.am: Use '+=' because it's already initialized.

2006-11-24  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix distcheck.
	* Makefile.am (dist-hook): New: remove remaining .svn files.
	* tests/Makefile.am (check-TESTS): Fix the case where srcdir ==
          buildir.
          (EXTRA_DIST, CLEANFILES): New.

2006-11-24  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	List the tests that fail in XFAIL_TESTS.
	* tests/Makefile.am: Here.

2006-11-23  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix bug #84.
	* src/parser/bison/ugrammar.y: Raise parse errors in cases where the
          then-part of an if-else or the at-part of an at-onleave is empty.
          eg: if (true) else whatever;
              at (true) onleave whatever;
	* vcs/local.rb: Add myself.

2006-11-23  Matthieu Nottale  <nottale@gostai.com>

	Fix timeout command behavior. 
	* src/ucommand.cc: Fix timeout command morphing: command can last less than timeout.

2006-11-23  Matthieu Nottale  <nottale@gostai.com>

	Fix incorrect bin header conversion 
	* src/uvalue.cc: Fix empty stream check.

2006-11-23  Matthieu Nottale  <nottale@gostai.com>

	Fix a segfault(assert fail) in uconnection.cc
	* src/ucommand.cc: Add missing initialisation of runlevel1 in UCOMMAND_TREE ctor.

2006-11-23  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix calls to usleep for Windows.
	* src/console.cc: Because 1/1000 = 0 and Sleep(0) might not work.

2006-11-23  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Install version.hh.
        This will be extremely helpful in order to know which version is
        installed (especially for the buildfarm so that it knows which version
        of the kernel it's using when compiling an engine/core/sdk/you name
        it).
	* src/Makefile.am: Here.

2006-11-22  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Use Sleep on Windows.
	* src/console.cc: Here.
